# Bourgeon

./: .cmake-variants.yaml  .gitignore  .gitmodules  CMakeLists.txt  README.md  build_configure.bat
cmake/: sha256.cmake
examples/: ui_demo.py
examples/disabled/: basic_info.py  discord.py  mem_scan.py
src/: CMakeLists.txt  bourgeon.cc  bourgeon.h  main.cc
src/d3d9/: d3d9_hook.cc  d3d9_hook.h
src/ddraw/: ddraw.cc  proxy_idirectdraw.cc  proxy_idirectdraw.h
src/imgui/: imgui_impl_dx7.cc
src/plugins/: auto_login.cc  auto_login.h  discord_key.h.example  discord_relay.cc  discord_relay.h  integrity_check.cc  integrity_check.h  moonlight_ui.cc  moonlight_ui.h  plugin.h
src/python/: ragnarok_client.cc
src/ragnarok/: configuration.h  game_mode.cc  login_mode.cc  mode_mgr.cc  mode_mgr.h  object_factory.cc  rag_connection.cc  rag_connection.h  ragnarok_client.cc  ragnarok_client.h  session.cc  ui_window_mgr.cc  ui_window_mgr.h
src/ragnarok/object_layouts/session/: 20250716.h  layouts.h
src/utils/: log_console.cc
tools/: CMakeLists.txt
tools/discord_encrypt/: main.cc
